--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,15 @@ environment:
 dependencies:
   cloud_firestore: ^3.4.3
   cupertino_icons: ^1.0.2
+  qr_flutter: ^4.0.0
   firebase_auth: ^3.6.2
   firebase_core: ^1.20.0
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.9
+  firebase_storage:
+  qr_code_scanner: ^1.0.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
