--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   firebase_storage:
   qr_code_scanner: ^1.0.1
   http: ^0.13.5
+  shared_preferences: ^2.0.15
+  provider: ^6.0.3
+  flutter_form_builder: ^7.6.0
+  intl: ^0.17.0
+  flutter_masked_text: ^0.8.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
