--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_form_builder: ^7.6.0
   intl: ^0.17.0
   flutter_masked_text: ^0.8.0
+  modal_progress_hud_nsn: ^0.3.0
+  dob_input_field: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
